--- a/rubato.html
+++ b/rubato.html
@@ -9,14 +9,14 @@
     p {color: green}p {text-decoration: underline;}
     span {color: blue;}
     span {text-decoration: underline;}
-    big {line-height: 170%;}
+    ul {line-height: 170;}
 
 </style>
 </head>
 <body>
     <h2>루바토 펜션 안내</h2>
     <hr>
-    <ul class="big">
+    <ul>
         <li><b>주소</b>: 충청남도 천안시 호서대길12</li>
     
         <li><b>전화번호</b>: 1588-0000</li>
