--- a/rubato.html
+++ b/rubato.html
@@ -25,7 +25,7 @@
 
         <li><b>부대시설</b>: 한식당, 눈썰매장, 탁구장, 수영장</li>
 
-        <li><b>담당자</b>: <a href="ex1-2.html"><span>홍길동</span></a></li>
+        <li><b>담당자</b>: <a href="ex1-2.html"><span>박진우</span></a></li>
     </ul>
 
 
