--- a/index.html
+++ b/index.html
@@ -94,4 +94,4 @@ table, th, tr, td {
     <br>
     <a href="form_test2.html">회원가입</a>
     <a href="rubato.html">[루바토 펜션 안내]</a>
-    <a href="rubato.html">[제1회 호서 국제 기타 페스티벌]</a>
+    <a href="guitar.html">[제1회 호서 국제 기타 페스티벌]</a>
