--- a/야간개장안내.html
+++ b/야간개장안내.html
@@ -3,22 +3,19 @@
 <head>
 <meta charset='utf-8'>
 <style>
-    #titlestyle1 {border-bottom: dotted 2px ;
-    padding-bottom: 10px;
-    margin: 20px;
+    h3 {border-left: solid 10px red;
+    padding-left: 10px;
+    margin: 20px 0 0 20px;}
+    ul {border: solid 1px black;
+    margin: 20px 0 0 20px;
+    padding: 20px 30px 30px 30px;
     width: 500px;}
-    #titlestyle2 {border-bottom: dotted 2px ;
-    padding-bottom: 10px;
-    margin: 20px;
-    width: 500px;}
-    #titlestyle4 {border-bottom: dotted 2px ;
-    padding-bottom: 10px;
-    margin: 20px;
-    width: 500px;}
-    #titlestyle3 {border-bottom: dotted 2px;
-    padding-bottom: 10px;
-    margin: 20px;
-    width: 500px;}
+    li {list-style-type: none;
+    border-bottom: dotted 1px gray;
+    padding: 10px 0 10px 0;}
+    span {font-weight: bold;}
+    
+  
 
 
 
@@ -26,13 +23,16 @@
 </head>
 <form action=" 신청접수완료.html">
 <body >
-    <p id="titlestyle1"><b>-기간</b> : 4.28~8.20 18:00~22:00 (입장마감 21시)</p>
-    <p id="titlestyle3"><b>-대상</b> : 동물원, 식물원</p>
-    <p id="titlestyle2"><b>-프로그램</b> : 야간동물원 관람, 동물생태 설명회, 식물전시</p>
-    <p id="titlestyle4"><b>-방문자 신분</b> : 
+    <h3>주말 야간 개장 안내</h3>
+    <ul>
+    <li><span>-기간</span> : 4.28~8.20 18:00~22:00 (입장마감 21시)</li>
+    <li><span>-대상</span> : 동물원, 식물원</li>
+    <li><span>-프로그램</span> : 야간동물원 관람, 동물생태 설명회, 식물전시</li>
+    <li><span>-방문자 신분</span> : 
         <input type="radio" name="info"> 호서대 재학생
         <input type="radio" name="info"> 일반인
         <input type="submit" value="방문신청">
-    </p>
+    </li>
+</ul>
 </body>
 </form>
