--- a/ex2_bg-image.html
+++ b/ex2_bg-image.html
@@ -32,8 +32,8 @@
 </head>
 <body>
 <h3>개똥지빠귀 새</h3>
-<img src='img/bird.jpg'>
+<img src='bird.jpg'>
 <div id='button'>
-<a href='홍보용프로필.html'> 구매하러가기 > &gt; </a> 
+<a href='ex1-2.html'> 구매하러가기 > &gt; </a> 
 </body>
 </html>
