--- a/index.html
+++ b/index.html
@@ -96,4 +96,4 @@ table, th, tr, td {
     <a href="rubato.html">[루바토 펜션 안내]</a>
     <a href="guitar.html">[제1회 호서 국제 기타 페스티벌]</a>
     <a href="야간개장안내.html">[호서 야간 개장 안내]</a>
-    <a href="홍보용프로필.html">[호서 야간 개장 안내]</a>
+    <a href="홍보용프로필.html">[세일 안내장]</a>
