--- a/index.html
+++ b/index.html
@@ -99,3 +99,4 @@ table, th, tr, td {
     <br>
     <a href="홍보용프로필.html">[세일 안내장]</a>
     <a href="월간일정표.html">[월간일정표]</a>
+    <a href="상품판매목록.html">[상품판매목록]</a>
