--- a/상품판매목록.html
+++ b/상품판매목록.html
@@ -59,7 +59,8 @@
 
 <div id='image'>
     <a href="index.html"><img src='스텝박스.JPG'
-width='120' height='100'></div></a>
+width='120' height='100'></a>
+</div>
 </p>
 <div id='desc'>
     <h4>스텝박스</h4>
@@ -79,7 +80,8 @@ width='120' height='100'></div></a>
 
 <div id='image'>
     <a href="index.html"><img src='좌식 사이클.JPG'
-width='120' height='100'></div></a>
+width='120' height='100'></a>
+</div>
 </p>
 <div id='desc'>
 <h4>좌식사이클</h4>
