--- a/상품판매목록.html
+++ b/상품판매목록.html
@@ -42,7 +42,7 @@ a:hover { text-decoration: none; color: gray;}
 </ul>
 <p class='clear'><br><hr><br>
 <div id='image'>
-    <a href="index.html"><img src='스텝박스.JPG'
+    <a href="index.html"><img src='스텝박스.jpg'
 width='120' height='100'></a>
 </div>
 </p>
@@ -58,7 +58,7 @@ width='120' height='100'></a>
     </ul>
 <p class='clear'><br><hr><br>
 <div id='image'>
-    <a href="index.html"><img src='좌식 사이클.JPG'
+    <a href="index.html"><img src='좌식 사이클.jpg'
 width='120' height='100'></a>
 </div>
 </p>
