--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ a:hover {text-decoration: none; color: purple; font-weight: bold;}
    
 </section>
 <footer>
-   <span><a href="ex1-2.html"> 20200365 박진우 자기소개서는 여기!</a></span>
+   <a href="ex1-2.html"> 20200365 [박진우 자기소개서는 여기!]</a>
 </footer>
 </body>
 </html>
