--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head>
 <meta charset='utf-8'>
 <style>
-* {padding: 0px;
-   margin: 0px;}
-header, nav, section, aside, footer {border:  solid 0px black;}
-
-table {float: right;}
-
-table, th, tr, td {
+table, tr, td {
 	border: solid 1px black;
 	border-collapse: collapse;
 	padding: 8px;
     background-color: paleturquoise;}
-    table {
-                float: right;
-                margin-right: 100px;
-                width: 800px; height: 800px;
-                border: solid 3px black;
+table {
+    float: right;
+    margin-right: 100px;
+    width: 800px; height: 800px;
+    border: solid 3px black;
             }
 header {width: 1000px;
         height: 130px;
@@ -47,16 +41,6 @@ margin-top: 15px;
 margin-bottom: 15px;
 text-align: center;
 }
-
-.clear {clear: both;}
-
-ul {
-	list-style-type: none;
-	margin-top: 20px;
-	margin-left: 30px;}
-
-li {display: inline;}
-
 a:link {text-decoration: none; color: black;}
 a:visited {text-decoration: none; color: black;}
 a:hover {text-decoration: none; color: purple; font-weight: bold;}
