--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ a:hover {text-decoration: none; color: purple; font-weight: bold;}
         <a href="야간개장안내.html">야간 개장 안내</a>ㅣ
         <a href="홍보용프로필.html">세일 안내장</a>ㅣ
         <a href="월간일정표.html">월간일정표</a>ㅣ
-        <a href="상품판매목록.html">상품판매목록</a>ㅣ
+        <a href="상품판매목록.html">상품판매목록</a>ㅣ<br>ㅣ
+        <a href="포토아카데미.html">포토아카데미</a>ㅣ
     </nav>
     <section>
     <table>
