--- a/포토아카데미.html
+++ b/포토아카데미.html
@@ -107,7 +107,7 @@ margin: 20px 0px 0px 20px;}
 
 <header>
       <div id="logo">
-            <img src="img/logo.png">
+            <img src="logo.png">
 
       </div>
       <nav id="menus">
@@ -128,6 +128,7 @@ margin: 20px 0px 0px 20px;}
 </header>
 
 <section id='main_img'>
+      <img src="main_img.png"
 </section>
 
 <section id='contents'>
@@ -148,7 +149,7 @@ margin: 20px 0px 0px 20px;}
 		<p>DSLR 카메라에서 DSLR은 “Digital Single Lens Reflex”의 약어로써 우리말로는 디지털 일안 반사식 카메라을 의미합니다. DSLR은 디지털 카메라로써 카메라 내부에 들어온 빛이 상단의 펜타프리즘을 통하여 뷰파인더에 맺히게 되어 셔터를 누르기 전에 뷰 파인더를 통하여 피사체를 확인할 수 있게 됩니다.</p>
 	
       <div id="figure">
-            <img src="img/dslr.png">
+            <img src="dslr.png">
       </div>
       <p>[그림 1]은 DSLR 카메라에서 셔터를 누르기 전의 상태를 보여주는데 렌즈를 통해 들어오는 빛은 카메라 내부에서 다음과 같은 과정을 거치게 됩니다.</p>
 		<ul>
@@ -163,7 +164,7 @@ margin: 20px 0px 0px 20px;}
 <div class="clear"></div>
 <footer>
       <div id="footer_logo">
-            <img src="img/footer_logo.png">
+            <img src="footer_logo.png">
       </div>
       <div id="address">
             <ul>
