--- a/포토아카데미.html
+++ b/포토아카데미.html
@@ -128,7 +128,7 @@ margin: 20px 0px 0px 20px;}
 </header>
 
 <section id='main_img'>
-      <img src="main_img.png"
+      <img src="main_img.png">
 </section>
 
 <section id='contents'>
