--- a/포토아카데미.html
+++ b/포토아카데미.html
@@ -47,7 +47,7 @@ margin: 20px 0px 0px 20px;}
 }
  /* main_img stylesheet */
 #main_img {
-      background-image: url(img/main_img.png);
+      background-image: url(main_img.png);
       background-repeat: no-repeat;
       background-position: top center;
 }
@@ -128,7 +128,7 @@ margin: 20px 0px 0px 20px;}
 </header>
 
 <section id='main_img'>
-      <img src="main_img.png">
+     
 </section>
 
 <section id='contents'>
